manifests/02-calico-policies/tier-platform/02-deny-all-ingress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-all-ingress
  annotations:
    tigera.io/tier: platform
spec:
  selector: all()
  ingress:
    - action: Deny
  types:
    - Ingress
